--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="question_asia">Lake Baikal is the world\'s
         oldest and freshwater lake. </string>
     <string name="incorrect_toast">Incorrect!</string>
+    <string name="down_button">Down</string>
 </resources>
